--- a/matrix-smile/build.gradle
+++ b/matrix-smile/build.gradle
@@ -35,10 +35,10 @@ dependencies {
   api 'com.github.haifengl:smile-core:4.4.2'
   testImplementation project(':matrix-core')
   testImplementation libs.groovy
-  testImplementation testLibs.slf4jSimple
-  testImplementation testLibs.junitJupiterApi
-  testRuntimeOnly testLibs.junitJupiterEngine
-  testRuntimeOnly testLibs.junitPlatformLauncher
+  testImplementation libs.slf4j.simple
+  testImplementation libs.junit.jupiter.api
+  testRuntimeOnly libs.junit.jupiter.engine
+  testRuntimeOnly libs.junit.platform.launcher
 }
 
 test {
