--- a/matrix-arff/build.gradle
+++ b/matrix-arff/build.gradle
@@ -30,10 +30,10 @@ dependencies {
   testImplementation libs.groovy
   testImplementation project(':matrix-core')
   testImplementation project(':matrix-datasets')
-  testImplementation testLibs.slf4jSimple
-  testImplementation testLibs.junitJupiterApi
-  testRuntimeOnly testLibs.junitJupiterEngine
-  testRuntimeOnly testLibs.junitPlatformLauncher
+  testImplementation libs.slf4j.simple
+  testImplementation libs.junit.jupiter.api
+  testRuntimeOnly libs.junit.jupiter.engine
+  testRuntimeOnly libs.junit.platform.launcher
 }
 
 test {
