--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -54,16 +54,16 @@ dependencies {
 
   testImplementation 'org.opentest4j:opentest4j:1.3.0'
   testImplementation libs.groovy
-  testImplementation testLibs.junitJupiterApi
-  testRuntimeOnly testLibs.junitJupiterEngine
-  testRuntimeOnly testLibs.junitPlatformLauncher
+  testImplementation libs.junit.jupiter.api
+  testRuntimeOnly libs.junit.jupiter.engine
+  testRuntimeOnly libs.junit.platform.launcher
   testImplementation 'org.apache.commons:commons-math3:3.6.1'
   testImplementation 'com.h2database:h2:2.4.240'
-  testImplementation libs.groovySql
-  testImplementation libs.groovyGinq
+  testImplementation libs.groovy.sql
+  testImplementation libs.groovy.ginq
 
   // For testing with SLF4J
-  testImplementation testLibs.slf4jSimple
+  testImplementation libs.slf4j.simple
 }
 
 test {
