--- a/matrix-examples/LinearRegression/build.gradle
+++ b/matrix-examples/LinearRegression/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     implementation project(':matrix-datasets')
     implementation project(':matrix-stats')
     implementation project(':matrix-xchart')
-    testImplementation testLibs.junitJupiter
-    testImplementation testLibs.junitPlatformLauncher
+    testImplementation libs.junit.jupiter
+    testImplementation libs.junit.platform.launcher
 }
 
 test {
