--- a/matrix-examples/candles/build.gradle
+++ b/matrix-examples/candles/build.gradle
@@ -41,8 +41,8 @@ dependencies {
   implementation "org.slf4j:slf4j-simple:$slf4jVersion"
   implementation "se.alipsa.gi:gi-swing:0.3.0"
   runtimeOnly "org.apache.logging.log4j:log4j-core:$log4j2Version"
-  testImplementation testLibs.junitJupiter
-  testImplementation testLibs.junitPlatformLauncher
+  testImplementation libs.junit.jupiter
+  testImplementation libs.junit.platform.launcher
 }
 
 test {
