--- a/matrix-groovy-ext/build.gradle
+++ b/matrix-groovy-ext/build.gradle
@@ -31,12 +31,12 @@ compileGroovy {
 
 dependencies {
   compileOnly libs.groovy
-  compileOnly libs.groovyAnt
-  compileOnly libs.groovyDoc
-  compileOnly libs.groovyTemplates
-  testImplementation testLibs.junitJupiterApi
-  testRuntimeOnly testLibs.junitJupiterEngine
-  testRuntimeOnly testLibs.junitPlatformLauncher
+  compileOnly libs.groovy.ant
+  compileOnly libs.groovy.doc
+  compileOnly libs.groovy.templates
+  testImplementation libs.junit.jupiter.api
+  testRuntimeOnly libs.junit.jupiter.engine
+  testRuntimeOnly libs.junit.platform.launcher
   testImplementation libs.groovy
 }
 
