--- a/matrix-gsheets/build.gradle
+++ b/matrix-gsheets/build.gradle
@@ -36,12 +36,12 @@ configurations {
 
 dependencies {
   compileOnly libs.groovy
-  compileOnly libs.groovyAnt
-  compileOnly libs.groovyDoc
-  compileOnly libs.groovyJson
-  compileOnly libs.groovyTemplates
+  compileOnly libs.groovy.ant
+  compileOnly libs.groovy.doc
+  compileOnly libs.groovy.json
+  compileOnly libs.groovy.templates
   compileOnly project(':matrix-core')
-  implementation 'com.google.auth:google-auth-library-oauth2-http:1.42.1'
+  implementation 'com.google.auth:google-auth-library-oauth2-http:1.43.0'
   implementation 'com.google.apis:google-api-services-oauth2:v2-rev20200213-2.0.0'
   implementation 'com.google.http-client:google-http-client-gson:2.1.0'
   implementation 'com.google.api-client:google-api-client:2.8.1'
@@ -50,13 +50,13 @@ dependencies {
   // For deleting sheets
   implementation 'com.google.apis:google-api-services-drive:v3-rev20251210-2.0.0'
   testImplementation project(':matrix-core')
-  testImplementation testLibs.junitJupiterApi
-  testRuntimeOnly testLibs.junitJupiterEngine
-  testRuntimeOnly testLibs.junitPlatformLauncher
+  testImplementation libs.junit.jupiter.api
+  testRuntimeOnly libs.junit.jupiter.engine
+  testRuntimeOnly libs.junit.platform.launcher
   testImplementation libs.groovy
-  testImplementation libs.groovyJson
+  testImplementation libs.groovy.json
   // Removed log4jToSlf4j - no longer needed after migrating to matrix-core Logger
-  testImplementation testLibs.slf4jSimple
+  testImplementation libs.slf4j.simple
   mockitoAgent('org.mockito:mockito-core:5.21.0') {
     transitive = false
   }
