--- a/matrix-tablesaw/build.gradle
+++ b/matrix-tablesaw/build.gradle
@@ -51,19 +51,19 @@ dependencies {
     // for XlsxWriter, TODO: remove once contributed to tablesaw
     implementation 'org.apache.poi:poi-ooxml:5.5.1'
     // for OdsReader and Writer, TODO: remove once contributed to tablesaw
-    implementation 'com.github.miachm.sods:SODS:1.8.0'
+    implementation 'com.github.miachm.sods:SODS:1.8.1'
     // for XmlReader and writer, TODO: remove once contributed to tablesaw
     implementation 'org.dom4j:dom4j:2.2.0'
 
     testImplementation project(':matrix-core')
     testImplementation project(':matrix-stats')
     testImplementation "tech.tablesaw:tablesaw-json:${tablesawVersion}"
-    testImplementation testLibs.junitJupiter
-    testRuntimeOnly testLibs.junitPlatformLauncher
+    testImplementation libs.junit.jupiter
+    testRuntimeOnly libs.junit.platform.launcher
     testImplementation 'com.h2database:h2:2.4.240'
-    testImplementation testLibs.slf4jSimple
+    testImplementation libs.slf4j.simple
     testImplementation libs.groovy
-    testImplementation libs.groovySql
+    testImplementation libs.groovy.sql
 }
 
 test {
