--- a/matrix-xchart/build.gradle
+++ b/matrix-xchart/build.gradle
@@ -44,8 +44,8 @@ dependencies {
 
     api 'org.knowm.xchart:xchart:3.8.8'
 
-    testImplementation testLibs.junitJupiter
-    testRuntimeOnly testLibs.junitPlatformLauncher
+    testImplementation libs.junit.jupiter
+    testRuntimeOnly libs.junit.platform.launcher
     testImplementation libs.groovy
     testImplementation project(':matrix-core')
     testImplementation project(':matrix-stats')
