--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-  id "com.github.ben-manes.versions" version "0.53.0" apply false
+  id "com.github.ben-manes.versions" version "0.54.0-SNAPSHOT" apply false
 }
 
 description = "Groovy libraries for working with matrix ([][] data)"
