--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,7 +15,7 @@ groovy-sql = { module = "org.apache.groovy:groovy-sql", version.ref = "groovy" }
 groovy-templates = { module = "org.apache.groovy:groovy-templates", version.ref = "groovy" }
 groovy-xml = { module = "org.apache.groovy:groovy-xml", version.ref = "groovy" }
 log4j-api = { module = "org.apache.logging.log4j:log4j-api", version.ref = "log4j" }
-groovier-junit = { module = "se.alipsa.groovy:groovier-junit", version = "0.1.0" }
+groovier-junit = { module = "se.alipsa.groovy:groovier-junit", version = "0.2.0-SNAPSHOT" }
 junit-platform-engine = { module = "org.junit.platform:junit-platform-engine", version.ref = "junit" }
 junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher", version.ref = "junit" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit" }
